--- a/build.gradle
+++ b/build.gradle
@@ -31,20 +31,19 @@ dependencies {
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
 }
 
-// commented out because jUnit may be used again
-//test {
-//    useJUnitPlatform()
-//
-//    testLogging {
-//        events "passed", "skipped", "failed"
-//
-//        showExceptions true
-//        exceptionFormat "full"
-//        showCauses true
-//        showStackTraces true
-//        showStandardStreams = false
-//    }
-//}
+test {
+    useJUnitPlatform()
+
+    testLogging {
+        events "passed", "skipped", "failed"
+
+        showExceptions true
+        exceptionFormat "full"
+        showCauses true
+        showStackTraces true
+        showStandardStreams = false
+    }
+}
 
 application {
     mainClass.set('Duke.Launcher')
